# cmake_demo

./: Notes.txt
demo1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo
demo2/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
demo3/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo
demo3/math/: CMakeLists.txt  Makefile  cmake_install.cmake
demo5/: .CMakeLists.txt.swp  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  demo
